--- a/style.css
+++ b/style.css
@@ -38,21 +38,33 @@ nav {
   justify-content: flex-start;
   align-items: flex-start;
 }
+
 .project-img {
   margin: 5px;
 }
+
 .project-img img {
   width: 350px;
   height: auto;
   border-radius: 5px;
 }
+
 .project-description {
   margin: 5px;
 }
+
 .project-description h3 {
   margin: 0 5px 5px;
   padding: 0;
   font-size: 23px;
+}
+
+.project-description p {
+  margin: 20px 5px;
+  padding: 0;
+  line-height: 1.8;
+  text-indent: 40px;
+  text-align: justify;
 }
 .po {
   color: rgb(155, 155, 110);
@@ -114,16 +126,9 @@ footer {
 .social-media {
   display: flex;
   justify-content: center;
+  gap: 5px;
 }
 
-.fa-instagram-square,
-.fa-twitter-square,
-.fa-whatsapp-square,
-.fa-envelope {
-  padding: 5px;
-  font-size: 30px;
-  color: white;
-}
 .koti {
   text-align: center;
   font-family: cursive;
@@ -186,28 +191,30 @@ footer {
   flex-direction: column;
 }
 .shooo {
-  position:absolute;
+  position: absolute;
   top: 1000px;
   left: -10px;
   height: 593px;
   width: auto;
 }
-.ronald{
+.ronald {
   width: 502px;
   height: 340px;
   border-radius: 50px;
   position: relative;
   left: 380px;
 }
-.t{
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  text-align: center  ;
+.t {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  text-align: center;
 }
 .form-container {
+  border: 2px solid red;
   display: flex;
   justify-content: center;
   flex-direction: column;
   margin-top: 100px;
+  padding: 100px;
 }
 .input-container {
   display: flex;
@@ -276,27 +283,69 @@ footer {
   font-size: 10px;
 }
 
-.input-item:not(:placeholder-shown).input- item:not(:focus) + .form-label {
+.input-item:not(:placeholder-shown).input-item:not(:focus) + .form-label {
   top: -2px;
   left: -2px;
   font-size: 10px;
   color: rgb(138, 130, 130);
 }
-.dbb{
+
+.textarea:not(:placeholder-shown).textarea:not(:focus) + .form-label {
+  top: -2px;
+  left: -2px;
+  font-size: 10px;
+  color: rgb(138, 130, 130);
+}
+.dbb {
   border-radius: 25px;
   position: absolute;
   top: 100px;
   left: 400px;
 }
-.wke{
- position: absolute;
- top: 500px;
- left: 630px;
- font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+.wke {
+  position: absolute;
+  top: 500px;
+  left: 630px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
-.batv{
+.batv {
   position: absolute;
   top: 570px;
   left: 235px;
+  text-align: center;
+}
+
+.sejarah-center {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: auto;
+  text-align: center;
+  padding: 20px;
+}
+
+.sejarah-center img {
+  border-radius: 50px;
+}
+.activity-flex {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  justify-content: center;
+}
+.activity-item {
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 0 3px gainsboro;
+  border-radius: 5px;
+  margin: 10px;
+}
+.activity-item img {
+  width: 350px;
+  height: auto;
+}
+.section-title {
+  font-size: 40px;
+  margin: 50px 0 0;
   text-align: center;
 }
